Fix text wrapping

--- a/scss/klis-index.scss
+++ b/scss/klis-index.scss
@@ -1,1 +1,5 @@
 /* Katelinlis.xyz initial style */
+
+p {
+    white-space: nowrap;
+}
